Bug 498044 - [1.9] Adapt JEP 261 changes to support new options
Change-Id: I0c50f7ef1c07234b5ca83b0b02482a911c88136e